--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -70,3 +70,12 @@ jobs:
     # Copy the files /build to s3
     - name: Deploy static website to S3 bucket
       run: aws s3 sync . s3://${{ secrets.S3_BUCKET_NAME }} --delete
+      
+    - name: Invalidate CloudFront
+      uses: chetan/invalidate-cloudfront-action@master
+      env:
+        DISTRIBUTION: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
+        PATHS: "/index.html"
+        AWS_REGION: "us-east-1"
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}    
